--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -1,7 +1,7 @@
 
 # A new chapter
 
-If you haven't yet read the getting started Wiki pages; [start there](https://github.com/jhudsl/OTTR_Template/wiki/Getting-started)
+If you haven't yet read the getting started Wiki pages; [start there](https://github.com/jhudsl/OTTR_Template/wiki/Getting-started).
 
 Every chapter needs to start out with this chunk of code:
 
@@ -33,13 +33,13 @@ library(magrittr)
 
 You can write all your text in sections like this, using `##` to indicate a new header. you can use additional pound symbols to create lower levels of headers.
 
-See [here](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf) for additional general information about how you can format text within R Markdown files. In addition, see [here](https://pandoc.org/MANUAL.html#pandocs-markdown)for more in depth and advanced options.
+See [here](https://www.rstudio.com/wp-content/uploads/2015/02/rmarkdown-cheatsheet.pdf) for additional general information about how you can format text within R Markdown files. In addition, see [here](https://pandoc.org/MANUAL.html#pandocs-markdown) for more in depth and advanced options.
 
-## Subtopic
+### Subtopic
 
-Here's a subheading and some text in this subsection!
+Here's a subheading (using three pound symbols) and some text in this subsection!
 
-### Code examples
+## Code examples
 
 You can demonstrate code like this:
 
@@ -64,13 +64,12 @@ hist_plot
 dev.off()
 ```
 
-### Image example
+## Image example
 
 How to include a Google slide. It's simplest to use the `ottrpal` package:
 
 
-
-```{r, fig.align='center', echo = FALSE, fig.alt= "Major point!! example image"}
+```{r, fig.align='center', out.width="100%", echo = FALSE, fig.alt= "Major point!! example image"}
 ottrpal::include_slide("https://docs.google.com/presentation/d/1YmwKdIy9BeQ3EShgZhvtb3MgR8P6iDX4DfFD65W_gdQ/edit#slide=id.gcc4fbee202_0_141")
 ```
 
@@ -78,43 +77,53 @@ But if you have the slide or some other image locally downloaded you can also us
 
 <img src="resources/images/02-chapter_of_course_files/figure-html//1YmwKdIy9BeQ3EShgZhvtb3MgR8P6iDX4DfFD65W_gdQ_gcc4fbee202_0_141.png" title="Major point!! example image" alt="Major point!! example image" style="display: block; margin: auto;" />
 
-### Video examples
+## Video examples
+You may also want to embed videos in your course. If alternatively, you just want to include a link you can do so like this:
 
-To show videos in your course, you can use markdown syntax like this:
+Check out this [link to a video](https://www.youtube.com/embed/VOCYL-FNbr0) using markdown syntax. 
 
-[A video we want to show](https://www.youtube.com/embed/VOCYL-FNbr0)
+### Using knitr
 
-Alternatively, you can use `knitr::include_url()` like this:
-Note that we are using `echo=FALSE` in the code chunk because we don't want the code part of this to show up.
-If you are unfamiliar with [how R Markdown code chunks work, read this](https://rmarkdown.rstudio.com/lesson-3.html).
+To embed videos in your course, you can use `knitr::include_url()` like this:
+Note that you should use `echo=FALSE` in the code chunk because we don't want the code part of this to show up. If you are unfamiliar with [how R Markdown code chunks work, read this](https://rmarkdown.rstudio.com/lesson-3.html).
+
 
 ```{r, echo=FALSE}
 knitr::include_url("https://www.youtube.com/embed/VOCYL-FNbr0")
 ```
 
-OR this works:
+### Using html
 
 <iframe src="https://www.youtube.com/embed/VOCYL-FNbr0" width="672" height="400px"></iframe>
 
-### Links to files
+## File examples
 
-This works:
+You can again use simple markdown syntax to just include a link to a file like so:
+
+[A file](https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf).
+
+Alternatively you can embed files like PDFs.
+
+### Using knitr
 
 ```{r, fig.align="center", echo=FALSE}
 knitr::include_url("https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf", height = "800px")
 ```
 
-Or this:
 
-[This works](https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf).
-
-Or this:
+### Using html
 
 <iframe src="https://www.bgsu.edu/content/dam/BGSU/center-for-faculty-excellence/docs/TLGuides/TLGuide-Learning-Objectives.pdf" width="672" height="800px"></iframe>
 
-### Links to websites
+## Website Examples
 
-Examples of including a website link.
+Yet again you can use a link to a website like so:
+
+[A Website](https://yihui.org)
+
+Or, you can embed some websites.
+
+### Using knitr
 
 This works:
 
@@ -122,9 +131,6 @@ This works:
 knitr::include_url("https://yihui.org")
 ```
 
-OR this:
-
-![Another link](https://yihui.org)
 
 OR this:
 
@@ -139,29 +145,27 @@ but they need a ; separator [@rmarkdown2021; @Xie2018].
 
 In text, we can put citations like this @rmarkdown2021.
 
-### Stylized boxes
+## Stylized boxes
 
 Occasionally, you might find it useful to emphasize a particular piece of information. To help you do so, we have provided css code and images (no need for you to worry about that!) to create the following stylized boxes. 
 
 You can use these boxes in your course with either of two options: using html code or Pandoc syntax.
 
-#### Using HTML
+### Using HTML
 
 To add a warning box like the following use:
 
-`<div class = "warning">`
-
-Followed by the text you want inside/
-
-`</div>`
-
-The line above marks the end of the box.
+```
+<div class = "warning">
+Followed by the text you want inside
+</div>
+```
 
 This will create the following:
 
 <div class = "warning">
 
-Followed by the text you want inside/
+Followed by the text you want inside
 
 </div>
 
@@ -199,15 +203,23 @@ reflection text
 
 </div>
 
-#### Using Pandoc div box syntax
+### Using Pandoc div box syntax
 
 Pandoc allows for a different syntax to be converted to the html that you just saw and also allows for conversion to LaTeX. See the [Bookdown](https://bookdown.org/yihui/rmarkdown-cookbook/custom-blocks.html) documentation for more information [@Xie2020].
 
-### {.notice}
 
-adfasdf
+```
+::: {.notice}
+Note using pandoc div conversion.
 
-###
+:::
+```
+
+::: {.notice}
+Note using pandoc div conversion.
+
+:::
+
 <!-- ::: {.notice} -->
 <!-- Please click on the subsection headers in the left hand -->
 <!-- navigation bar (e.g., 2.1, 4.3) a second time to expand the -->
@@ -216,7 +228,7 @@ adfasdf
 <!-- ::: -->
 
 
-### Dropdown summaries
+## Dropdown summaries
 
 <details><summary> You can hide additional information in a dropdown menu </summary>
 Here's more words that are hidden.
