adding rendered link

--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -3,6 +3,8 @@
 
 If you haven't yet read the getting started Wiki pages; [start there](https://github.com/jhudsl/OTTR_Template/wiki/Getting-started).
 
+To see the rendered version of this chapter and the rest of the template, see here: https://jhudatascience.org/OTTR_Template/.
+
 Every chapter needs to start out with this chunk of code:
 
 
