Add errors to check that this is working

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -8,6 +8,11 @@ ottrpal::set_knitr_image_path()
 
 ## Motivation
 
+ahsuidbiuasbdv
+ahsudifhs
+
+https://www.absidbais.com/
+https://www.ahuiabsidvbais.com/
 
 ## Target Audience  
 
