Remove fhdasl_style from path

--- a/style-sets/fhdasl/index.Rmd
+++ b/style-sets/fhdasl/index.Rmd
@@ -7,7 +7,7 @@ bibliography: book.bib
 biblio-style: apalike
 link-citations: yes
 description: Description about Course/Book.
-favicon: assets/fhdasl_style/favicon.ico
+favicon: assets/favicon.ico
 ---
 
 ```{r include=FALSE}
