Add spelling errors

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -10,6 +10,7 @@ ottrpal::set_knitr_image_path()
 
 ahsuidbiuasbdv
 ahsudifhs
+iuwbuibfisu
 
 https://www.absidbais.com/
 https://www.ahuiabsidvbais.com/
