Add errors on purpose

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -7,7 +7,12 @@ ottrpal::set_knitr_image_path()
 
 
 ## Motivation
+hauihgea
+huifagbuisfasd
+hauisdfias
 
+https://ksdsdfgsdgbfk
+https://github.com/ksdsdfgsdgbfk
 
 ## Target Audience  
 
