Add some errors

--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -8,6 +8,13 @@ ottrpal::set_knitr_image_path()
 
 ## Motivation
 
+hauishdiguas
+ahuisdfiuas
+asdhuiasbid
+biub
+
+https://github.com/ahsuishdf
+https://hquihguahiuh
 
 ## Target Audience  
 
