Add in broken URL

--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -1,6 +1,15 @@
 
 # A new chapter
 
+
+
+```{r panel-setup, include = FALSE}
+install.packages("xaringanExtra", repos = 'https://cloud.r-project.org')
+xaringanExtra::use_panelset()
+xaringanExtra::style_panelset_tabs(font_family = "inherit")
+```
+
+
 If you haven't yet read the getting started Wiki pages; [start there](https://www.ottrproject.org/getting_started.html).
 
 To see the rendered version of this chapter and the rest of the template, see here: https://jhudatascience.org/OTTR_Template/.
