--- a/02-chapter_of_course.Rmd
+++ b/02-chapter_of_course.Rmd
@@ -11,7 +11,7 @@ Every chapter needs to start out with this chunk of code:
 ```{r, include = FALSE}
 ottrpal::set_knitr_image_path()
 ```
-
+spelling error: abhsuidfbaiusdhguashdf
 ## Learning Objectives
 
 Every chapter also needs Learning objectives that will look like this:  
